exercise-6-8/exercise_7/src/grammar.js
// Generated by Peggy 1.2.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
	function C() {
		this.constructor = child;
	}
	C.prototype = parent.prototype;
	child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
	var self = Error.call(this, message);
	if (Object.setPrototypeOf) {
		Object.setPrototypeOf(self, peg$SyntaxError.prototype);
	}
	self.expected = expected;
	self.found = found;
	self.location = location;
	self.name = "SyntaxError";
	return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
	padString = padString || " ";
	if (str.length > targetLength) {
		return str;
	}
	targetLength -= str.length;
	padString += padString.repeat(targetLength);
	return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function (sources) {
	var str = "Error: " + this.message;
	if (this.location) {
		var src = null;
		var k;
		for (k = 0; k < sources.length; k++) {
			if (sources[k].source === this.location.source) {
				src = sources[k].text.split(/\r\n|\n|\r/g);
				break;
			}
		}
		var s = this.location.start;
		var loc = this.location.source + ":" + s.line + ":" + s.column;
		if (src) {
			var e = this.location.end;
			var filler = peg$padEnd("", s.line.toString().length);
			var line = src[s.line - 1];
			var last = s.line === e.line ? e.column : line.length + 1;
			str +=
				"\n --> " +
				loc +
				"\n" +
				filler +
				" |\n" +
				s.line +
				" | " +
				line +
				"\n" +
				filler +
				" | " +
				peg$padEnd("", s.column - 1) +
				peg$padEnd("", last - s.column, "^");
		} else {
			str += "\n at " + loc;
		}
	}
	return str;
};

peg$SyntaxError.buildMessage = function (expected, found) {
	var DESCRIBE_EXPECTATION_FNS = {
		literal: function (expectation) {
			return '"' + literalEscape(expectation.text) + '"';
		},

		class: function (expectation) {
			var escapedParts = expectation.parts.map(function (part) {
				return Array.isArray(part)
					? classEscape(part[0]) + "-" + classEscape(part[1])
					: classEscape(part);
			});

			return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
		},

		any: function () {
			return "any character";
		},

		end: function () {
			return "end of input";
		},

		other: function (expectation) {
			return expectation.description;
		},
	};

	function hex(ch) {
		return ch.charCodeAt(0).toString(16).toUpperCase();
	}

	function literalEscape(s) {
		return s
			.replace(/\\/g, "\\\\")
			.replace(/"/g, '\\"')
			.replace(/\0/g, "\\0")
			.replace(/\t/g, "\\t")
			.replace(/\n/g, "\\n")
			.replace(/\r/g, "\\r")
			.replace(/[\x00-\x0F]/g, function (ch) {
				return "\\x0" + hex(ch);
			})
			.replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
				return "\\x" + hex(ch);
			});
	}

	function classEscape(s) {
		return s
			.replace(/\\/g, "\\\\")
			.replace(/\]/g, "\\]")
			.replace(/\^/g, "\\^")
			.replace(/-/g, "\\-")
			.replace(/\0/g, "\\0")
			.replace(/\t/g, "\\t")
			.replace(/\n/g, "\\n")
			.replace(/\r/g, "\\r")
			.replace(/[\x00-\x0F]/g, function (ch) {
				return "\\x0" + hex(ch);
			})
			.replace(/[\x10-\x1F\x7F-\x9F]/g, function (ch) {
				return "\\x" + hex(ch);
			});
	}

	function describeExpectation(expectation) {
		return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
	}

	function describeExpected(expected) {
		var descriptions = expected.map(describeExpectation);
		var i, j;

		descriptions.sort();

		if (descriptions.length > 0) {
			for (i = 1, j = 1; i < descriptions.length; i++) {
				if (descriptions[i - 1] !== descriptions[i]) {
					descriptions[j] = descriptions[i];
					j++;
				}
			}
			descriptions.length = j;
		}

		switch (descriptions.length) {
			case 1:
				return descriptions[0];

			case 2:
				return descriptions[0] + " or " + descriptions[1];

			default:
				return (
					descriptions.slice(0, -1).join(", ") +
					", or " +
					descriptions[descriptions.length - 1]
				);
		}
	}

	function describeFound(found) {
		return found ? '"' + literalEscape(found) + '"' : "end of input";
	}

	return (
		"Expected " +
		describeExpected(expected) +
		" but " +
		describeFound(found) +
		" found."
	);
};

function peg$parse(input, options) {
	options = options !== undefined ? options : {};

	var peg$FAILED = {};
	var peg$source = options.grammarSource;

	var peg$startRuleFunctions = { start: peg$parsestart };
	var peg$startRuleFunction = peg$parsestart;

	var peg$c0 = ":";
	var peg$c1 = "am";
	var peg$c2 = "pm";

	var peg$r0 = /^[01]/;
	var peg$r1 = /^[2]/;
	var peg$r2 = /^[0-3]/;
	var peg$r3 = /^[0-5]/;
	var peg$r4 = /^[0-9]/;

	var peg$e0 = peg$literalExpectation(":", false);
	var peg$e1 = peg$otherExpectation("am or pm");
	var peg$e2 = peg$literalExpectation("am", false);
	var peg$e3 = peg$literalExpectation("pm", false);
	var peg$e4 = peg$otherExpectation("the two different hour schemas");
	var peg$e5 = peg$classExpectation(["0", "1"], false, false);
	var peg$e6 = peg$classExpectation(["2"], false, false);
	var peg$e7 = peg$classExpectation([["0", "3"]], false, false);
	var peg$e8 = peg$otherExpectation("minutes");
	var peg$e9 = peg$classExpectation([["0", "5"]], false, false);
	var peg$e10 = peg$classExpectation([["0", "9"]], false, false);
	var peg$e11 = peg$otherExpectation("digit");

	var peg$f0 = function (hour, minutes) {
		return hour + minutes;
	};
	var peg$f1 = function (hour, minutes, meridiem) {
		return hour + minutes + meridiem;
	};
	var peg$f2 = function (hour, meridiem) {
		return hour + meridiem;
	};
	var peg$f3 = function () {
		return 0;
	};
	var peg$f4 = function () {
		return 12 * 60;
	};
	var peg$f5 = function (hour) {
		return hour * 60;
	};
	var peg$f6 = function (leading, trailing) {
		return parseInt(leading + trailing);
	};
	var peg$f7 = function (leadingMinute, trailingMinute) {
		return parseInt(leadingMinute + trailingMinute);
	};
	var peg$f8 = function (digit) {
		return parseInt(digit);
	};

	var peg$currPos = 0;
	var peg$savedPos = 0;
	var peg$posDetailsCache = [{ line: 1, column: 1 }];
	var peg$maxFailPos = 0;
	var peg$maxFailExpected = [];
	var peg$silentFails = 0;

	var peg$result;

	if ("startRule" in options) {
		if (!(options.startRule in peg$startRuleFunctions)) {
			throw new Error(
				"Can't start parsing from rule \"" + options.startRule + '".'
			);
		}

		peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
	}

	function text() {
		return input.substring(peg$savedPos, peg$currPos);
	}

	function offset() {
		return peg$savedPos;
	}

	function range() {
		return {
			source: peg$source,
			start: peg$savedPos,
			end: peg$currPos,
		};
	}

	function location() {
		return peg$computeLocation(peg$savedPos, peg$currPos);
	}

	function expected(description, location) {
		location =
			location !== undefined
				? location
				: peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildStructuredError(
			[peg$otherExpectation(description)],
			input.substring(peg$savedPos, peg$currPos),
			location
		);
	}

	function error(message, location) {
		location =
			location !== undefined
				? location
				: peg$computeLocation(peg$savedPos, peg$currPos);

		throw peg$buildSimpleError(message, location);
	}

	function peg$literalExpectation(text, ignoreCase) {
		return { type: "literal", text: text, ignoreCase: ignoreCase };
	}

	function peg$classExpectation(parts, inverted, ignoreCase) {
		return {
			type: "class",
			parts: parts,
			inverted: inverted,
			ignoreCase: ignoreCase,
		};
	}

	function peg$anyExpectation() {
		return { type: "any" };
	}

	function peg$endExpectation() {
		return { type: "end" };
	}

	function peg$otherExpectation(description) {
		return { type: "other", description: description };
	}

	function peg$computePosDetails(pos) {
		var details = peg$posDetailsCache[pos];
		var p;

		if (details) {
			return details;
		} else {
			p = pos - 1;
			while (!peg$posDetailsCache[p]) {
				p--;
			}

			details = peg$posDetailsCache[p];
			details = {
				line: details.line,
				column: details.column,
			};

			while (p < pos) {
				if (input.charCodeAt(p) === 10) {
					details.line++;
					details.column = 1;
				} else {
					details.column++;
				}

				p++;
			}

			peg$posDetailsCache[pos] = details;

			return details;
		}
	}

	function peg$computeLocation(startPos, endPos) {
		var startPosDetails = peg$computePosDetails(startPos);
		var endPosDetails = peg$computePosDetails(endPos);

		return {
			source: peg$source,
			start: {
				offset: startPos,
				line: startPosDetails.line,
				column: startPosDetails.column,
			},
			end: {
				offset: endPos,
				line: endPosDetails.line,
				column: endPosDetails.column,
			},
		};
	}

	function peg$fail(expected) {
		if (peg$currPos < peg$maxFailPos) {
			return;
		}

		if (peg$currPos > peg$maxFailPos) {
			peg$maxFailPos = peg$currPos;
			peg$maxFailExpected = [];
		}

		peg$maxFailExpected.push(expected);
	}

	function peg$buildSimpleError(message, location) {
		return new peg$SyntaxError(message, null, null, location);
	}

	function peg$buildStructuredError(expected, found, location) {
		return new peg$SyntaxError(
			peg$SyntaxError.buildMessage(expected, found),
			expected,
			found,
			location
		);
	}

	function peg$parsestart() {
		var s0;

		s0 = peg$parsemeridiemFormats();
		if (s0 === peg$FAILED) {
			s0 = peg$parseTwentyFourHourFormat();
		}

		return s0;
	}

	function peg$parseTwentyFourHourFormat() {
		var s0, s1, s2, s3;

		s0 = peg$currPos;
		s1 = peg$parsehour();
		if (s1 !== peg$FAILED) {
			if (input.charCodeAt(peg$currPos) === 58) {
				s2 = peg$c0;
				peg$currPos++;
			} else {
				s2 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$e0);
				}
			}
			if (s2 !== peg$FAILED) {
				s3 = peg$parseminutes();
				if (s3 !== peg$FAILED) {
					peg$savedPos = s0;
					s0 = peg$f0(s1, s3);
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}

		return s0;
	}

	function peg$parsemeridiemFormats() {
		var s0, s1, s2, s3, s4;

		s0 = peg$currPos;
		s1 = peg$parsehour();
		if (s1 !== peg$FAILED) {
			if (input.charCodeAt(peg$currPos) === 58) {
				s2 = peg$c0;
				peg$currPos++;
			} else {
				s2 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$e0);
				}
			}
			if (s2 !== peg$FAILED) {
				s3 = peg$parseminutes();
				if (s3 !== peg$FAILED) {
					s4 = peg$parsemeridiem();
					if (s4 !== peg$FAILED) {
						peg$savedPos = s0;
						s0 = peg$f1(s1, s3, s4);
					} else {
						peg$currPos = s0;
						s0 = peg$FAILED;
					}
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$parsehour();
			if (s1 !== peg$FAILED) {
				s2 = peg$parsemeridiem();
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s0 = peg$f2(s1, s2);
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		}

		return s0;
	}

	function peg$parsemeridiem() {
		var s0, s1;

		peg$silentFails++;
		s0 = peg$currPos;
		if (input.substr(peg$currPos, 2) === peg$c1) {
			s1 = peg$c1;
			peg$currPos += 2;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e2);
			}
		}
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$f3();
		}
		s0 = s1;
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			if (input.substr(peg$currPos, 2) === peg$c2) {
				s1 = peg$c2;
				peg$currPos += 2;
			} else {
				s1 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$e3);
				}
			}
			if (s1 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$f4();
			}
			s0 = s1;
		}
		peg$silentFails--;
		if (s0 === peg$FAILED) {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e1);
			}
		}

		return s0;
	}

	function peg$parsehour() {
		var s0, s1;

		peg$silentFails++;
		s0 = peg$currPos;
		s1 = peg$parsetwoDigitHour();
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$f5(s1);
		}
		s0 = s1;
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			s1 = peg$parsedigit();
			if (s1 !== peg$FAILED) {
				peg$savedPos = s0;
				s1 = peg$f5(s1);
			}
			s0 = s1;
		}
		peg$silentFails--;
		if (s0 === peg$FAILED) {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e4);
			}
		}

		return s0;
	}

	function peg$parsetwoDigitHour() {
		var s0, s1, s2;

		s0 = peg$currPos;
		if (peg$r0.test(input.charAt(peg$currPos))) {
			s1 = input.charAt(peg$currPos);
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e5);
			}
		}
		if (s1 !== peg$FAILED) {
			s2 = peg$parsedigit();
			if (s2 !== peg$FAILED) {
				peg$savedPos = s0;
				s0 = peg$f6(s1, s2);
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		if (s0 === peg$FAILED) {
			s0 = peg$currPos;
			if (peg$r1.test(input.charAt(peg$currPos))) {
				s1 = input.charAt(peg$currPos);
				peg$currPos++;
			} else {
				s1 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$e6);
				}
			}
			if (s1 !== peg$FAILED) {
				if (peg$r2.test(input.charAt(peg$currPos))) {
					s2 = input.charAt(peg$currPos);
					peg$currPos++;
				} else {
					s2 = peg$FAILED;
					if (peg$silentFails === 0) {
						peg$fail(peg$e7);
					}
				}
				if (s2 !== peg$FAILED) {
					peg$savedPos = s0;
					s0 = peg$f6(s1, s2);
				} else {
					peg$currPos = s0;
					s0 = peg$FAILED;
				}
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		}

		return s0;
	}

	function peg$parseminutes() {
		var s0, s1, s2;

		peg$silentFails++;
		s0 = peg$currPos;
		if (peg$r3.test(input.charAt(peg$currPos))) {
			s1 = input.charAt(peg$currPos);
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e9);
			}
		}
		if (s1 !== peg$FAILED) {
			if (peg$r4.test(input.charAt(peg$currPos))) {
				s2 = input.charAt(peg$currPos);
				peg$currPos++;
			} else {
				s2 = peg$FAILED;
				if (peg$silentFails === 0) {
					peg$fail(peg$e10);
				}
			}
			if (s2 !== peg$FAILED) {
				peg$savedPos = s0;
				s0 = peg$f7(s1, s2);
			} else {
				peg$currPos = s0;
				s0 = peg$FAILED;
			}
		} else {
			peg$currPos = s0;
			s0 = peg$FAILED;
		}
		peg$silentFails--;
		if (s0 === peg$FAILED) {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e8);
			}
		}

		return s0;
	}

	function peg$parsedigit() {
		var s0, s1;

		peg$silentFails++;
		s0 = peg$currPos;
		if (peg$r4.test(input.charAt(peg$currPos))) {
			s1 = input.charAt(peg$currPos);
			peg$currPos++;
		} else {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e10);
			}
		}
		if (s1 !== peg$FAILED) {
			peg$savedPos = s0;
			s1 = peg$f8(s1);
		}
		s0 = s1;
		peg$silentFails--;
		if (s0 === peg$FAILED) {
			s1 = peg$FAILED;
			if (peg$silentFails === 0) {
				peg$fail(peg$e11);
			}
		}

		return s0;
	}

	peg$result = peg$startRuleFunction();

	if (peg$result !== peg$FAILED && peg$currPos === input.length) {
		return peg$result;
	} else {
		if (peg$result !== peg$FAILED && peg$currPos < input.length) {
			peg$fail(peg$endExpectation());
		}

		throw peg$buildStructuredError(
			peg$maxFailExpected,
			peg$maxFailPos < input.length ? input.charAt(peg$maxFailPos) : null,
			peg$maxFailPos < input.length
				? peg$computeLocation(peg$maxFailPos, peg$maxFailPos + 1)
				: peg$computeLocation(peg$maxFailPos, peg$maxFailPos)
		);
	}
}

export const grammar = {
	SyntaxError: peg$SyntaxError,
	parse: peg$parse,
};
